Creating the Admin Component in the SPA

--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -12,6 +12,9 @@
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link disabled" [routerLink]="['/messages']">Messages</a>
         </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link disabled" [routerLink]="['/admin']">Admin</a>
+        </li>
       </ul>
   
       <!-- a-ngif + tab : let's you use conditionals inside HTML -->
