--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -12,7 +12,7 @@
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link disabled" [routerLink]="['/messages']">Messages</a>
         </li>
-        <li class="nav-item" routerLinkActive="active">
+        <li *appHasRole="['Admin', 'Moderator']" class="nav-item" routerLinkActive="active">
           <a class="nav-link disabled" [routerLink]="['/admin']">Admin</a>
         </li>
       </ul>
